== Version 2.6.17 Work in progress (not released -- this is a draft) ==

   TODO: compile .po (creme_config)

== Version 2.6.16 ==

  Users side :
  ------------
    # Apps :
        * Creme_config :
            - In configuration for CustomForms, the removing of a fields was broken
              when there is a special group (like "Addresses").
        * Reports :
            - A user needs the permission to export a model in order to export a Report now.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # An issue with 'creme_core.forms.enumerable.EnumerableSelectMultiple' has been fixed;
          in the context, the selected value was handled as a string instead of a list.


== Version 2.6.15 ==

  UPGRADE NOTES :
    - Do not forget to tun the command "generatemedia".

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Apps :
            * Creme_config :
                - The CSS for 'brick.GenericModelBrick' has been improved when the related model has many fields.


== Version 2.6.14 ==

  Users side :
  ------------
    # You can now see the detail-view of a public EntityFilter which belongs to another user.
      It fixes some issues for Reports with filters too.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The rendering of HistoryLine is now more robust with 'ContentTypes' which have been removed.
        # Apps :
            * Reports :
                - The class-view 'views.graph.GraphFetchSettingsForInstance' is now deprecated.
                  Its uses have been removed.


== Version 2.6.13 ==

  Users side :
  ------------
    # In merge view, the left & right value could not be applied with the image selector.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------